--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A simple React app with sign-up, login, and dashboard pages",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts --openssl-legacy-provider build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.3.1",
@@ -32,3 +32,5 @@
     ]
   }
 }
+
+
