--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "A simple React app with sign-up, login, and dashboard pages",
   "main": "index.js",
-  "scripts": {
   "start": "react-scripts start",
-  "build": "react-scripts --openssl-legacy-provider build",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
