--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
   "start": "react-scripts start",
-  "build": "react-scripts --openssl-legacy-provider build",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
-},
+}
+,
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.3.1",
